# resume

./: .gitignore  README.md  pyproject.toml
frontend/: package-lock.json  test-api.sh
frontend/app/: page.tsx
frontend/app/Event/: page.tsx
frontend/app/api-test/: page.tsx
frontend/app/appointment/: page.tsx
frontend/app/create-job/: page.tsx
frontend/app/feedback/: page.tsx
frontend/app/interview/: page.tsx
frontend/app/offer-letter/: page.tsx
frontend/app/upload-resumes/: page.tsx
frontend/lib/: api-config.ts
resume/: hooks.py
resume/api/:  csrf.py  api.py  appointment_letter.py  candidate.py  candidate_feedback.py  csrf.py  forgot_password.py  interview.py  interview_feedback.py  job_opening.py  offer_letter.py  salary_annexure.py  upload_and_process copy.py  upload_and_process.py  upload_file.py
resume/fixtures/: client_script.json  custom_field.json  custom_fields.py  doctype.json  print_format.json  role.json  server_script.json
resume/public/: pdf_upload.js
resume/public/js/: job_applicant.js  job_opening_parse_cv.js  pdf_upload.js
resume/resume/: upload.py
resume/resume/custom/: create_custom_fields.py  email.py  interview_feedback.json  job_applicant.json
resume/resume/doctype/applicant_document/: applicant_document.js  applicant_document.json  applicant_document.py  test_applicant_document.py
resume/resume/doctype/application_declaration/: application_declaration.js  application_declaration.json  application_declaration.py  test_application_declaration.py
resume/resume/fixtures/: custom_field.json
(+41 files in other folders)
