[project]
name = "resume"
authors = [
    { name = "Pratul", email = "ptpratul2@gmail.com" }
]
description = "For automating Job Applicant Creation"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe",
    "pypika @ git+https://github.com/frappe/pypika@2c50e6142b2d61d2d243e466fdd5dc03b3d918f2",
    "hrms",
    "pdfminer.six",
    "pytesseract",
    "Pillow",
    "pdf2image",
    "google-generativeai",
    "python-docx",
    "doc2txt>=1.0.8",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
# Example if you need dev dependencies
# package_name = "~=1.1.0"

